--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -109,6 +109,7 @@
   					</div>
   				</div>
 
+
           <!-- Estado de la Comunicacion -->
           <!-- <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
@@ -159,6 +160,30 @@
                  <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >Debes Seleccionar una Sub Dirección SRECI</small>
                </div>
             </div>
+
+
+            <!-- Subir PDF del Oficio entrante -->
+            <div class="col-xs-12 col-sm-6 col-md-12">
+              <div class="form-group">
+                 <label for="exampleInputFile">Agregar Pdf</label>
+                 <input  type="file" class="form-control-file" id="imagenUsuario" name="imagenUsuario"
+                     placeholder="Subir Imagen ..." aria-describedby="fileHelp" >
+
+                 <small id="fileHelp" class="form-text text-muted">Esta seccion sirve, para ingresar un pdf desde su equipo local y asiganarlo al Oficio.</small>
+                </div>
+                <!-- Barra de Progreso de Carga de la Imagen -->
+                <div class="progress">
+                    <div id="upload-progress-bar" class="progress-bar progress-bar-success"
+                        role="progressbar"
+                        aria-valuenow="0"
+                        aria-valuemin="0"
+                        aria-valuemax="0"
+                        style="width:1%">
+                    </div>
+                </div>
+                <p id="status"></p>
+            </div>
+
 
           </div>
       </div>
