--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
 <!-- Datos Generales de los Usuarios -->
 <div class="row">
@@ -73,6 +74,75 @@
   			</div>
       </div>
 
+
+      <hr>
+      <!-- Datos de las Direcciones Involucradas -->
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#dirSreci">Direcciones SRECI</a>
+        </h4>
+      </div>
+
+      <hr>
+      <div class="panel-collapse collapse in" id="dirSreci">
+  			<div class="row">
+          <!-- Direccion Encargada del tema de la Comunicacion -->
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="form-group">
+              <select #idDireccionSreci="ngModel" class="form-control" name="idDireccionSreci" id="idDireccionSreci"
+                    ngControl="idDireccionSreci" [(ngModel)]="comunicacion.idDireccionSreci"  (change)="getlistaSubDireccionesSRECI()" >
+                  <option value="0">Dirección SRECI Responsable </option>
+                  <option *ngFor="let list of JsonOutgetlistaDireccionSRECI" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
+              </select>
+              <small class="form-text text-muted" *ngIf="idDireccionSreci.value == 0 || idDireccionSreci.value == null " >Debes Seleccionar una Dirección SRECI responsable</small>
+            </div>
+         </div>
+
+         <!-- Direccion Encargada del tema de la Comunicacion -->
+         <div class="col-xs-12 col-sm-6 col-md-6">
+           <div class="form-group">
+             <select #idDeptoFuncional="ngModel" class="form-control" name="idDeptoFuncional" id="idDeptoFuncional"
+                   ngControl="idDeptoFuncional" [(ngModel)]="comunicacion.idDeptoFuncional"  >
+                 <option value="0">Sub Dirección SRECI Responsable</option>
+                 <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECI" value="{{ list.idDeptoFuncional }}">{{ list.descDeptoFuncional }}</option>
+             </select>
+             <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >Debes Seleccionar una Sub Dirección SRECI responsable</small>
+           </div>
+         </div>
+       </div>
+
+        <!-- Boton de Agregar Nueva Direcion Acompañante -->
+        <!-- <input type="button" id="btAdd" value="Añadir Elemento" class="bt" (click)="fnd()" /> -->
+        <div class="row">
+          <!-- Direccion Acompañante del tema de la Comunicacion -->
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="form-group">
+              <select #idDireccionSreciAcom="ngModel" class="form-control" name="idDireccionSreciAcom" id="idDireccionSreciAcom"
+                    ngControl="idDireccionSreciAcom" [(ngModel)]="comunicacion.idDireccionSreciAcom"  (change)="getlistaSubDireccionesSRECIAcom()" >
+                  <option value="0">Dirección SRECI Acompañante </option>
+                  <option *ngFor="let list of JsonOutgetlistaDireccionSRECIAcom" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
+              </select>
+              <small class="form-text text-muted" *ngIf="idDireccionSreciAcom.value == 0 || idDireccionSreciAcom.value == null " >Debes Seleccionar una Dirección SRECI acompañante</small>
+            </div>
+         </div>
+
+         <!-- Sub Direccion Acompañante del tema de la Comunicacion -->
+         <div class="col-xs-12 col-sm-6 col-md-6">
+           <div class="form-group">
+             <select #idDeptoFuncionalAcom="ngModel" class="form-control" name="idDeptoFuncionalAcom" id="idDeptoFuncionalAcom"
+                   ngControl="idDeptoFuncionalAcom" [(ngModel)]="comunicacion.idDeptoFuncionalAcom"  >
+                 <option value="0">Sub Dirección SRECI Acompañante</option>
+                 <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECIAcom" value="{{ list.idDeptoFuncional }}">{{ list.descDeptoFuncional }}</option>
+             </select>
+             <small class="form-text text-muted" *ngIf="idDeptoFuncionalAcom.value == 0 || idDeptoFuncionalAcom.value == null " >Debes Seleccionar una Sub Dirección SRECI acompañante</small>
+           </div>
+         </div>
+
+
+        </div>
+      </div>
+
+
       <hr>
       <!-- Datos de las Relaciones de las Tablas -->
       <div class="panel-heading">
@@ -137,37 +207,14 @@
   			</div>
 
             <div class="row">
-              <!-- Direccion Encargada del tema de la Comunicacion -->
-              <div class="col-xs-12 col-sm-6 col-md-6">
-                <div class="form-group">
-                  <select #idDireccionSreci="ngModel" class="form-control" name="idDireccionSreci" id="idDireccionSreci"
-                        ngControl="idDireccionSreci" [(ngModel)]="comunicacion.idDireccionSreci"  (change)="getlistaSubDireccionesSRECI()" >
-                      <option value="0">Selecciona una Dirección SRECI</option>
-                      <option *ngFor="let list of JsonOutgetlistaDireccionSRECI" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
-                  </select>
-                  <small class="form-text text-muted" *ngIf="idDireccionSreci.value == 0 || idDireccionSreci.value == null " >Debes Seleccionar una Dirección SRECI</small>
-                </div>
-             </div>
-
-             <!-- Direccion Encargada del tema de la Comunicacion -->
-             <div class="col-xs-12 col-sm-6 col-md-6">
-               <div class="form-group">
-                 <select #idDeptoFuncional="ngModel" class="form-control" name="idDeptoFuncional" id="idDeptoFuncional"
-                       ngControl="idDeptoFuncional" [(ngModel)]="comunicacion.idDeptoFuncional"  >
-                     <option value="0">Selecciona una Sub Dirección SRECI</option>
-                     <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECI" value="{{ list.idDeptoFuncional }}">{{ list.descDeptoFuncional }}</option>
-                 </select>
-                 <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >Debes Seleccionar una Sub Dirección SRECI</small>
-               </div>
-            </div>
-
 
             <!-- Subir PDF del Oficio entrante -->
             <div class="col-xs-12 col-sm-6 col-md-12">
               <div class="form-group">
-                 <label for="exampleInputFile">Agregar Pdf</label>
-                 <input  type="file" class="form-control-file" id="imagenUsuario" name="imagenUsuario"
-                     placeholder="Subir Imagen ..." aria-describedby="fileHelp" >
+                <label for="exampleInputFile">Agregar Pdf</label>
+                <input #pdfDocumento="ngModel" type="file" class="form-control-file" id="pdfDocumento" name="pdfDocumento"
+                     ngControl="pdfDocumento" [(ngModel)]="comunicacion.pdfDocumento" placeholder="Subir Pdf ..."
+                     aria-describedby="fileHelp" (change)="fileChangeEvent($event)">
 
                  <small id="fileHelp" class="form-text text-muted">Esta seccion sirve, para ingresar un pdf desde su equipo local y asiganarlo al Oficio.</small>
                 </div>
@@ -198,12 +245,12 @@
 			<hr class="colorgraph">
 			<div class="row">
 				<div class="col-xs-12 col-md-3">
-            <input type="submit" value="Guardar" class="btn btn-primary btn-block btn-lg" tabindex="17" >
+            <input type="submit" value="Guardar" class="btn btn-primary btn-block btn-lg" tabindex="17" [disabled]="!ingresoComunicacionForm.valid" >
         </div>
 				<div class="col-xs-12 col-md-3">
 
             <a [routerLink]="['/ingreso-comunicacion']" class="btn btn-success btn-block btn-lg"
-               (onclick)="resetForm()" >Ingresar</a>
+               (onclick)="fileChangeEvent($event)" >Notificar</a>
         </div>
 			</div>
 		</form>
