--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -4,12 +4,18 @@
 <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-9 col-sm-offset-2 col-md-offset-3">
       <!-- Div que representan las Acciones al Ingresar un Usuario -->
+      <br>
       <div name="alert" class="alert alert-success" role="alert" *ngIf="status == 'success' " >
         <strong>Bien hecho!</strong> {{ mensajes }}
       </div>
 
       <div class="alert alert-danger" role="alert" *ngIf="status == 'error' " >
         <strong>Que mal!</strong> {{ mensajes }}
+      </div>
+
+      <!-- Loader de Carga de los Datos -->
+      <div id="loader-2" *ngIf="loading == 'show' ">
+        <img src="assets/images/loading_1.gif" alt="Cargando Tareas">
       </div>
 
 		<form #ingresoComunicacionForm="ngForm" (ngSubmit)="onSubmit(registerComunicacion)" name="ingresoComunicacionForm" role="form">
@@ -54,9 +60,9 @@
           <div class="col-xs-12 col-sm-6 col-md-12">
             <div class="form-group">
                 <textarea #descCorrespondencia="ngModel" class="form-control" id="descCorrespondencia" name="descCorrespondencia" rows="3"
-                    placeholder="Ingresa la Descripcion de la Comunicacion" tabindex="3"
+                    placeholder="Ingresa la Descripcion del Oficio" tabindex="3" required minlength="10"
                     ngControl="descCorrespondencia" [(ngModel)]="comunicacion.descCorrespondencia"></textarea>
-                <small class="form-text text-muted" *ngIf="descCorrespondencia.errors?.required" >Ingresa el Codigo de Referencia</small>
+                <small class="form-text text-muted" *ngIf="descCorrespondencia.errors?.required" >Ingresa el Descripcion del Oficio</small>
                 <small class="form-text text-muted" *ngIf="descCorrespondencia.errors?.minlength" >Se nesesita por lo menos {{ descCorrespondencia.errors.minlength.requiredLength }} caracteres</small>
             </div>
           </div>
@@ -65,12 +71,11 @@
           <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="form-group">
                 <label for="example-date-input" class="form-text text-muted">Fecha Maxima de Entrega </label>
-                <input #fechaMaxEntrega class="form-control" type="date" data-date-format="DD MMMM YYYY" value="{{date | date: 'ddMMyyyy'}}" tabindex="4"
+                <input #fechaMaxEntrega class="form-control" type="date"  value="2017-09-11" tabindex="4" required
                 name="fechaMaxEntrega" id="fechaMaxEntrega" ngControl="fechaMaxEntrega" [(ngModel)]="comunicacion.fechaMaxEntrega" >
+
             </div>
           </div>
-
-
   			</div>
       </div>
 
@@ -89,24 +94,26 @@
           <!-- Direccion Encargada del tema de la Comunicacion -->
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
-              <select #idDireccionSreci="ngModel" class="form-control" name="idDireccionSreci" id="idDireccionSreci"
+              <select #idDireccionSreci="ngModel" class="form-control" name="idDireccionSreci" id="idDireccionSreci" required
                     ngControl="idDireccionSreci" [(ngModel)]="comunicacion.idDireccionSreci"  (change)="getlistaSubDireccionesSRECI()" >
                   <option value="0">Dirección SRECI Responsable </option>
                   <option *ngFor="let list of JsonOutgetlistaDireccionSRECI" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
               </select>
               <small class="form-text text-muted" *ngIf="idDireccionSreci.value == 0 || idDireccionSreci.value == null " >Debes Seleccionar una Dirección SRECI responsable</small>
+              <small class="form-text text-muted" *ngIf="idDireccionSreci.errors?.required" >Debes Seleccionar una Dirección SRECI responsable</small>
             </div>
          </div>
 
          <!-- Direccion Encargada del tema de la Comunicacion -->
          <div class="col-xs-12 col-sm-6 col-md-6">
            <div class="form-group">
-             <select #idDeptoFuncional="ngModel" class="form-control" name="idDeptoFuncional" id="idDeptoFuncional"
+             <select #idDeptoFuncional="ngModel" class="form-control" name="idDeptoFuncional" id="idDeptoFuncional" required
                    ngControl="idDeptoFuncional" [(ngModel)]="comunicacion.idDeptoFuncional"  >
                  <option value="0">Sub Dirección SRECI Responsable</option>
                  <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECI" value="{{ list.idDeptoFuncional }}">{{ list.descDeptoFuncional }}</option>
              </select>
              <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >Debes Seleccionar una Sub Dirección SRECI responsable</small>
+             <small class="form-text text-muted" *ngIf="idDeptoFuncional.errors?.required" >Debes Seleccionar una Sub Dirección SRECI responsable</small>
            </div>
          </div>
        </div>
@@ -201,6 +208,8 @@
                   <option *ngFor="let list of JsonOutgetlistaInstitucion" value="{{ list.idInstitucion }}">{{ list.descInstitucion }}</option>
               </select>
               <small class="form-text text-muted" *ngIf="idInstitucion.value == 0 || idInstitucion.value == null " >Debes Seleccionar una Institución</small>
+             <!-- <input #hideCom="ngModel" type="hidden" name="hideCom" ngControl="hideCom" [(ngModel)]="comunicacion.hideCom" value="{{ comunicacion.idInstitucion }}" required> -->
+             <!-- <small class="form-text text-muted" *ngIf="hideCom.errors?.required" >Debes Seleccionar una Sub Dirección JJJJ</small> -->
             </div>
           </div>
 
@@ -245,16 +254,17 @@
 			<hr class="colorgraph">
 			<div class="row">
 				<div class="col-xs-12 col-md-3">
-            <input type="submit" value="Guardar" class="btn btn-primary btn-block btn-lg" tabindex="17" [disabled]="!ingresoComunicacionForm.valid" >
+            <input type="submit" value="Guardar" class="btn btn-primary btn-block btn-lg" tabindex="17" [disabled]="!ingresoComunicacionForm.valid"  >
         </div>
 				<div class="col-xs-12 col-md-3">
 
             <a [routerLink]="['/ingreso-comunicacion']" class="btn btn-success btn-block btn-lg"
-               (onclick)="fileChangeEvent($event)" >Notificar</a>
+               (click)="resetForm()" >Limpiar</a>
         </div>
 			</div>
 		</form>
 	</div>
+
   <!-- Columna del formulario -->
 
   <!-- Columna para mostrar los Datos relalevantes de los Ingresos de Comunicaciones -->
@@ -262,12 +272,16 @@
     <div class="card" style="width: 16rem; margin-top:5px">
       <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
       <div class="card-block">
-        <h4 class="card-title">Resumen</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <li>Numero de Comunicaciones Ingresadas</li>
-        <input type="text" name="buscatexto"  value=""
+        <h4 class="card-title"> Resumen</h4>
+        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+         <p> <i class="material-icons">assignment</i> Oficios Ingresados {{ countOficios }} </p>
+         <p>  <i class="material-icons">assignment_late</i> Oficos Pendientes </p>
+         <p> <i class="material-icons">assignment_turned_in</i> Oficios Finalizadas </p>
+
+        <input type="text" name="buscatexto"  value="" placeholder="Ingresa Oficio"
               (keyup)="buscarPais(buscatexto.value)"  #buscatexto>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-primary">Ver listado</a>
+
       </div>
     </div>
   </div>
