NMA | 2017-09-12 | Resumenes de Ingresos de Oficois
Resumenes de Ingresos de Oficios en el Wiget de la ventrana. v2

--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -290,9 +290,9 @@
         <p class="card-text">Resumen de la informacion registrada de los Oficios.</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item"> <i class="material-icons">assignment</i> Oficios Ingresados     - <span class="badge badge-pill badge-primary"> {{ countOficiosIngresados }}  </span> </li>
-        <li class="list-group-item"> <i class="material-icons">assignment_late</i> Oficos Pendientes      -- <span class="badge badge-pill badge-warning"> {{ countOficiosPendientes }} </span> </li>
-        <li class="list-group-item"> <i class="material-icons">assignment_turned_in</i> Oficios Finalizados     - <span class="badge badge-pill badge-danger"> {{ countOficiosFinalizados }} </span> </li>
+        <li class="list-group-item"> <i class="material-icons">assignment</i> Oficios Ingresados -- <span class="badge badge-pill badge-primary"> {{ countOficiosIngresados }}  </span> </li>
+        <li class="list-group-item"> <i class="material-icons">assignment_late</i> Oficios Pendientes -- <span class="badge badge-pill badge-warning"> {{ countOficiosPendientes }} </span> </li>
+        <li class="list-group-item"> <i class="material-icons">assignment_turned_in</i> Oficios Finalizados -- <span class="badge badge-pill badge-danger"> {{ countOficiosFinalizados }} </span> </li>
       </ul>
         <div class="card-block" style="margin-left:8px">
           <a href="#" class="card-link">Ver tablero</a>
