--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -54,7 +54,7 @@
           Seguimiento
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#/" routerLinkActive="active">Agregar Actividad</a>
+          <a class="dropdown-item" [routerLink]="['agregar-actividad']" routerLinkActive="active">Agregar Actividad</a>
           <a class="dropdown-item" href="#/" routerLinkActive="active">Finalizar Actividad</a>
           <a class="dropdown-item"  routerLinkActive="active">Agregar Documentos / Actividad</a>
         </div>
