NAM | 2017-09-13 | Maquetacion de Formulario de Asignacion
Maquetacion del Formulario de Asignacion de Actividaddes de la Comunicacion recien ingresada.

--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -29,7 +29,7 @@
 
       <!-- Loader de Carga de los Datos -->
       <div id="loader-2" *ngIf="loading == 'show' ">
-        <img src="assets/images/loading_1.gif" alt="Cargando Tareas">
+        <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
       </div>
 
 		<form #ingresoComunicacionForm="ngForm" (ngSubmit)="onSubmit(registerComunicacion)" name="ingresoComunicacionForm" role="form">
