--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -10,16 +10,26 @@
   <div class="row">
     <div class="col-md-1-12">
       <h4>Area de Busqueda</h4>
-      <input class="form-control"  type="search" name="" value="">
+      <input class="form-control" (keyup)="buscarOficio( buscadorOficio.value )" #buscadorOficio="ngModel" type="text" name="buscadorOficio" id="buscadorOficio"
+           ngControl="buscadorOficio" [(ngModel)]="asignarOficios.buscadorOficio"  type="search" name="" value="">
     </div>
   </div>
+
+  <!-- <div class="progress" *ngIf="loading == 'show'">
+    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+     aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+     40% Complete (success)
+   </div>
+ </div> -->
+
   <hr>
 
   <div class="row">
     <!-- <div class="col-md-1-12"> -->
-      <table class="table table-hover table-responsive">
+      <!-- <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" >
         <thead>
-          <tr class="table-dark">
+          <tr >
+            <th>No.</th>
             <th>Estado</th>
             <th>No. Oficio</th>
             <th>Nombre Institución</th>
@@ -28,34 +38,80 @@
             <th>Accion</th>
           </tr>
         </thead>
-        <tbody *ngFor="let item of JsonOutgetlistaOficiosAll">
-          <tr >
-            <th > {{ item.idEstado.descripcionEstado }} </th>
-            <th> {{ item.codReferenciaSreci }} </th>
-            <th> {{ item.idInstitucion.descInstitucion }} </th>
-            <th> {{ item.temaComunicacion }} </th>
-            <th> {{ timeConverter(item.fechaMaxEntrega.timestamp )  }} </th>
-            <th> <a href="#" (click)="datoOficio( item.codReferenciaSreci )" data-toggle="modal" data-target="#t_and_c_m"  > <i class="material-icons">assignment_ind</i> </a>  <a href="#"> <i class="material-icons">search </i></a>  </th>
+        <tbody >
+          <tr *ngFor="let item of JsonOutgetlistaOficiosAll; let i = index " >
+            <td > 1 </td>
+            <td > {{ item.idEstado.descripcionEstado }} </td>
+            <td> {{ item.codReferenciaSreci }} </td>
+            <td> {{ item.idInstitucion.descInstitucion }} </td>
+            <td> {{ item.temaComunicacion }} </td>
+            <td> {{ timeConverter(item.fechaMaxEntrega.timestamp )  }} </td>
+            <td> <a href="#" (click)="datoOficio( item.codReferenciaSreci )" data-toggle="modal" data-target="#t_and_c_m"  > <i class="material-icons">assignment_ind</i> </a>  <a href="#"> <i class="material-icons">search </i></a>  </td>
           </tr>
         </tbody>
-    </table>
+    </table> -->
     <!-- </div> -->
+
+    <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" >
+        <thead >
+            <tr>
+              <th>Estado</th>
+              <th>No. Oficio</th>
+              <th>Nombre Institución</th>
+              <th>Tema Oficio</th>
+              <th>Fecha Ingreso</th>
+              <th>Accion</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+              <th>Estado</th>
+              <th>No. Oficio</th>
+              <th>Nombre Institución</th>
+              <th>Tema Oficio</th>
+              <th>Fecha Ingreso</th>
+              <th>Accion</th>
+            </tr>
+        </tfoot>
+        <tbody >
+            <tr *ngFor="let item of JsonOutgetlistaOficiosAll">
+              <td > {{ item.idEstado.descripcionEstado }} </td>
+              <td> {{ item.codReferenciaSreci }} </td>
+              <td> {{ item.idInstitucion.descInstitucion }} </td>
+              <td> {{ item.temaComunicacion }} </td>
+              <td> {{ timeConverter(item.fechaMaxEntrega.timestamp )  }} </td>
+              <td> <a href="#" (click)="datoOficio( item.codReferenciaSreci )" data-toggle="modal" data-target="#t_and_c_m"  > <i class="material-icons">assignment_ind</i> </a> </td>
+            </tr>
+        </tbody>
+    </table>
+
+
+    <!-- <table id="example" class="display" width="100%"></table> -->
+
+
   </div>
 
 
    <div class="clearfix"></div>
 
+
   <ul class="pagination">
     <!-- Boton de Previous -->
     <li>
        <a  [routerLink]="['/agregar-actividad', pagePrev]" aria-label="Previous" >
-          <i class="material-icons">skip_previous</i>
+          <i class="material-icons">navigate_before</i>
        </a>
+    </li>
+    <!-- Botones de las Paginas Totales -->
+    <li *ngFor="let page of pages">
+      <a [routerLink]="['/agregar-actividad', page + 1 ]" >
+        <i class="material-icons">panorama_fish_eye</i>{{ page + 1 }}
+      </a>
     </li>
     <!-- Boton de Next -->
     <li>
        <a  [routerLink]="['/agregar-actividad', pageNext]" aria-label="Next" >
-          <i class="material-icons">skip_next</i>
+          <i class="material-icons">navigate_next</i>
        </a>
     </li>
   </ul>
