--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -50,14 +50,20 @@
 
       <!-- Menu de Seguimiento -->
       <li class="nav-item dropdown" >
-        <a class="nav-link dropdown-toggle" href="/#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Seguimiento
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" [routerLink]="['agregar-actividad']" routerLinkActive="active">Agregar Actividad</a>
+          <a class="dropdown-item" [routerLink]="['agregar-actividad']" routerLinkActive="active">Asignar Actividad</a>
           <a class="dropdown-item" href="#/" routerLinkActive="active">Finalizar Actividad</a>
           <a class="dropdown-item"  routerLinkActive="active">Agregar Documentos / Actividad</a>
         </div>
+      </li>
+
+      <li>
+        <a class="user-image" >
+          <img src="http://localhost/sicdoc/symfony/web/uploads/users/1505704804.jpeg" style="width:100px" alt="">
+        </a>
       </li>
 
     </ul>
