--- a/symfony/src/BackendBundle/Resources/views/Emails/sendMail.html.twig
+++ b/symfony/src/BackendBundle/Resources/views/Emails/sendMail.html.twig
@@ -18,7 +18,7 @@
                 <li> Fecha Creacion: </li>                
             </ul>
             
-            <h4> Saludos cordiales </h4>
+            <h4> Saludos cordiales NMA</h4>
         </div>
     </div>
 </body>
