--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -9,9 +9,13 @@
   <!-- Fila para el Area de Busqueda de los Oficios -->
   <div class="row">
     <div class="col-md-1-12">
-      <h4>Area de Busqueda</h4>
-      <input class="form-control" (keyup)="buscarOficio( buscadorOficio.value )" #buscadorOficio="ngModel" type="text" name="buscadorOficio" id="buscadorOficio"
-           ngControl="buscadorOficio" [(ngModel)]="asignarOficios.buscadorOficio"  type="search" name="" value="">
+    <h4>Buscar por:
+      <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="temaComunicacion" >Tema de Oficio |
+    <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="codCorrespondenciaEnc" checked="checked" >No. Oficio Interno |
+    <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="codReferenciaSreci" checked="checked" >No. Oficio Ingresado
+    </h4>
+      <input class="form-control" type="text" name="search"  [(ngModel)]="search" placeholder="Buscar" >
+
     </div>
   </div>
 
@@ -25,62 +29,48 @@
   <hr>
 
   <div class="row">
-    <!-- <div class="col-md-1-12"> -->
-      <!-- <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" >
-        <thead>
-          <tr >
-            <th>No.</th>
-            <th>Estado</th>
-            <th>No. Oficio</th>
-            <th>Nombre Institución</th>
-            <th>Tema Oficio</th>
-            <th>Fecha Ingreso</th>
-            <th>Accion</th>
-          </tr>
-        </thead>
-        <tbody >
-          <tr *ngFor="let item of JsonOutgetlistaOficiosAll; let i = index " >
-            <td > 1 </td>
-            <td > {{ item.idEstado.descripcionEstado }} </td>
-            <td> {{ item.codReferenciaSreci }} </td>
-            <td> {{ item.idInstitucion.descInstitucion }} </td>
-            <td> {{ item.temaComunicacion }} </td>
-            <td> {{ timeConverter(item.fechaMaxEntrega.timestamp )  }} </td>
-            <td> <a href="#" (click)="datoOficio( item.codReferenciaSreci )" data-toggle="modal" data-target="#t_and_c_m"  > <i class="material-icons">assignment_ind</i> </a>  <a href="#"> <i class="material-icons">search </i></a>  </td>
-          </tr>
-        </tbody>
-    </table> -->
-    <!-- </div> -->
 
     <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" >
         <thead >
             <tr>
               <th>Estado</th>
-              <th>No. Oficio</th>
+              <th>No. Oficio Interno</th>
+              <th>No. Oficio Ingresado</th>
               <th>Nombre Institución</th>
               <th>Tema Oficio</th>
               <th>Fecha Ingreso</th>
+              <th>Fecha Entrega</th>
               <th>Accion</th>
             </tr>
         </thead>
         <tfoot>
             <tr>
               <th>Estado</th>
-              <th>No. Oficio</th>
+              <th>No. Oficio Interno</th>
+              <th>No. Oficio Ingresado</th>
               <th>Nombre Institución</th>
               <th>Tema Oficio</th>
               <th>Fecha Ingreso</th>
+              <th>Fecha Entrega</th>
               <th>Accion</th>
             </tr>
         </tfoot>
         <tbody >
-            <tr *ngFor="let item of JsonOutgetlistaOficiosAll">
+            <tr *ngFor="let item of JsonOutgetlistaOficiosAll | searchfilter:codCorr:search ">
               <td > {{ item.idEstado.descripcionEstado }} </td>
+              <td> {{ item.codCorrespondenciaEnc }} </td>
               <td> {{ item.codReferenciaSreci }} </td>
               <td> {{ item.idInstitucion.descInstitucion }} </td>
               <td> {{ item.temaComunicacion }} </td>
-              <td> {{ timeConverter(item.fechaMaxEntrega.timestamp )  }} </td>
-              <td> <a href="#" (click)="datoOficio( item.codReferenciaSreci )" data-toggle="modal" data-target="#t_and_c_m"  > <i class="material-icons">assignment_ind</i> </a> </td>
+                <!-- <td> {{ timeConverter( item.fechaMaxEntrega.timestamp )  }} </td> -->
+              <td> {{ item.fechaIngreso.timestamp | generateDate }} </td>
+              <td> {{ item.fechaMaxEntrega.timestamp | generateDate }} </td>
+              <td> <a href="/#" (click)="datoOficio( item.codReferenciaSreci, item.idDeptoFuncional.idDeptoFuncional,
+                      item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
+                      item.idFuncionarioAsignado.idFuncionario)"
+                    data-toggle="modal" data-target="#t_and_c_m"  >
+                    <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Asignar Oficio" >assignment_ind</i>
+                  </a> </td>
             </tr>
         </tbody>
     </table>
@@ -91,9 +81,7 @@
 
   </div>
 
-
    <div class="clearfix"></div>
-
 
   <ul class="pagination">
     <!-- Boton de Previous -->
@@ -117,55 +105,65 @@
   </ul>
 
   <!-- Modal -->
-  <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+        data-backdrop="static" data-keyboard="false">
   	<div class="modal-dialog modal-lg">
   		<div class="modal-content">
   			<div class="modal-header">
-  				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-  				<h4 class="modal-title" id="myModalLabel">Oficio: {{ tableAgregarActividadCodOficio }} </h4>
+  				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"> <i class="material-icons">close</i> </button>
+  				<h4 class="modal-title" id="myModalLabel">Oficio No. | {{ codOficioModal }} </h4>
   			</div>
   			<div class="modal-body">
             <form>
               <div class="row">
                 <div class="col-md-6 mb-3">
-                  <label for="validationDefault01">Codigo Oficio</label>
-                  <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="{{ codOficioModal }}" required>
+                  <label for="validationDefault01">Nombre de Funcionario Asignado</label>
+                  <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="{{ nombreFuncModal }} {{ apellidoFuncModal }} {{ idFuncModal }} " disabled>
                 </div>
                 <div class="col-md-6 mb-3">
-                  <label for="validationDefault02">Last name</label>
-                  <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value="Otto" required>
+                  <label for="validationDefault02">Buscar por Nombre</label>
+                  <input type="text" class="form-control" [(ngModel)]="search2" name="search2" id="search2" placeholder="Buscar" value="">
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-6 mb-3">
-                  <label for="validationDefault03">City</label>
-                  <input type="text" class="form-control" id="validationDefault03" placeholder="City" required>
-                  <div class="invalid-feedback">
-                    Please provide a valid city.
-                  </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                  <label for="validationDefault04">State</label>
-                  <input type="text" class="form-control" id="validationDefault04" placeholder="State" required>
-                  <div class="invalid-feedback">
-                    Please provide a valid state.
-                  </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                  <label for="validationDefault05">Zip</label>
-                  <input type="text" class="form-control" id="validationDefault05" placeholder="Zip" required>
-                  <div class="invalid-feedback">
-                    Please provide a valid zip.
-                  </div>
-                </div>
+                  <!-- fila 2 del Formulario -->
               </div>
-
-              <button class="btn btn-primary" type="submit">Submit form</button>
+              <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
           </form>
+
+          <!-- Tabla de Funcionarios disponibles para asignar -->
+          <div class="table-responsive" style="height: 300px; overflow: auto">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>Nombres</th>
+                  <th>Apellidos</th>
+                  <th>Puesto</th>
+                  <th>Email</th>
+                  <th>Celular</th>
+                  <th>Accion</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of JsonOutgetlistaFuncionariosDisponibles | searchfilter:'nombre1Funcionario':search2 " >
+                  <td> {{ item.nombre1Funcionario }} {{ item.nombre2Funcionario }} </td>
+                  <td> {{ item.apellido1Funcionario }} {{ item.apellido2Funcionario }} </td>
+                  <td> {{ item.idTipoFuncionario.descTipoFuncionario }} </td>
+                  <td> {{ item.emailFuncionario }} </td>
+                  <td> {{ item.celularFuncionario }} </td>
+                  <td> <a style="cursor: pointer;" class="nav-link" (click)="asignarOficioFuncionario( codOficioModal, item.idFuncionario )" >
+                    <span class="badge badge-pill badge-primary"  data-toggle="tooltip" data-placement="top" title="Asigna Oficio al Funcionario seleccionado" >Asignar</span></a>
+                  </td>
+                </tr>
+
+              </tbody>
+            </table>
+            </div>
+
   			</div>
-  			<div class="modal-footer">
+  			<!-- <div class="modal-footer">
   				<button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
-  			</div>
+  			</div> -->
   		</div><!-- /.modal-content -->
   	</div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
