NAM | 217-09-18 | Asignar Oficios
La ventana de Asignar Oficos esta a un 80%, ya que falta enviar e correo de Notificacion del Oficio Asignado y Anexar el Documeno Inicial el cual fue cargado.
Pendientes:
1 ) Anexar el Documento (URL) -> Incluir Campo dentro de la BD
2 ) Anexar Imagen de Secretaria de Relacione Exteriores en el Correo
3 ) Validacion de las Banderas de los Botones:
      a ) Verde = Ingresado (Puede ser asignado)
      b ) Amarillo = Asignado (Puede ser asignado con previas condiciones)
      c ) Naranja = Por Vencer (Se puede asignar)
      d ) Rojo = Vencido (No se puede Asignar)
      e ) Azul = Cerrado (No se puede Asignar).

--- a/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
@@ -9,7 +9,7 @@
 				<hr class="colorgraph">
 				<div class="form-group " >
                     <input type="email" name="email" id="email" #email="ngModel" ngControl="email" [(ngModel)]="user.email"
-                    class="form-control input-lg" required minlength=10 placeholder="Email Address" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+                    class="form-control input-lg" required minlength=10 placeholder="nombre@dominio.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
 
                     <span *ngIf="email.errors?.pattern" >El campo no tiene formato de Correo</span>
                     <span *ngIf="email.errors?.required" >El email es obligatorio</span>
