--- a/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="jumbotron">
             <h1 class="display-3">Estimado(a) Sr(a): {{ name }}  {{ apellidoOficio }} </h1>
-            <p class="lead">Se ha ingresado un Oficio con la siguiente informacion: </p>
+            <p class="lead">Se le notifica la Asignación de un Oficio con la siguiente informacion: </p>
             <hr class="my-4">
             <ul>
                 <li> Numero de Oficio Externo: {{ oficioExtNo }} </li>
@@ -18,7 +18,9 @@
                 <li> Fecha Creacion: </li>                
             </ul>
             
+            <img src="{{ 'secretaria_exterior.png'  }}" alt="Symfony!" />
             <h4> Saludos cordiales </h4>
+
         </div>
     </div>
 </body>
