--- a/Angular_SICDOC/sicdoc/src/app/views/login/register.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/register.component.html
@@ -180,6 +180,35 @@
   					</div>
   				</div> -->
   			</div>
+
+        <!-- Fila para la Direccion y SubDireccion de la SRECI -->
+      			<div class="row">
+              <!-- Direccion Encargada del tema de la Comunicacion -->
+              <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="form-group">
+                  <select #idDireccionSreci="ngModel" class="form-control" name="idDireccionSreci" id="idDireccionSreci" required
+                        ngControl="idDireccionSreci" [(ngModel)]="user.idDireccionSreci"  (change)="getlistaSubDireccionesSRECI()" >
+                      <option value="0">Dirección SRECI Responsable </option>
+                      <option *ngFor="let list of JsonOutgetlistaDireccionSRECI" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
+                  </select>
+                  <small class="form-text text-muted" *ngIf="idDireccionSreci.value == 0 || idDireccionSreci.value == null " >Debes Seleccionar una Dirección SRECI responsable</small>
+                  <small class="form-text text-muted" *ngIf="idDireccionSreci.errors?.required" >Debes Seleccionar una Dirección SRECI responsable</small>
+                </div>
+             </div>
+
+             <!-- SubDireccion Encargada del tema de la Comunicacion -->
+             <div class="col-xs-12 col-sm-6 col-md-6">
+               <div class="form-group">
+                 <select #idDeptoFuncional="ngModel" class="form-control" name="idDeptoFuncional" id="idDeptoFuncional" required
+                       ngControl="idDeptoFuncional" [(ngModel)]="user.idDeptoFuncional"  >
+                     <option value="0">Sub Dirección SRECI Responsable</option>
+                     <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECI" value="{{ list.idDeptoFuncional }}">{{ list.descDeptoFuncional }}</option>
+                 </select>
+                 <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >Debes Seleccionar una Sub Dirección SRECI responsable</small>
+                 <small class="form-text text-muted" *ngIf="idDeptoFuncional.errors?.required" >Debes Seleccionar una Sub Dirección SRECI responsable</small>
+               </div>
+             </div>
+           </div>
       </div>
 
       <hr>
