--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -65,8 +65,10 @@
                 <!-- <td> {{ timeConverter( item.fechaMaxEntrega.timestamp )  }} </td> -->
               <td> {{ item.fechaIngreso.timestamp | generateDate }} </td>
               <td> {{ item.fechaMaxEntrega.timestamp | generateDate }} </td>
-              <td> <a href="/#" (click)="datoOficio( item.codReferenciaSreci, item.idDeptoFuncional.idDeptoFuncional,
+              <td> <a href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
+                      item.idDeptoFuncional.idDeptoFuncional,
                       item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
+                      item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
                       item.idFuncionarioAsignado.idFuncionario)"
                     data-toggle="modal" data-target="#t_and_c_m"  >
                     <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Asignar Oficio" >assignment_ind</i>
@@ -111,14 +113,19 @@
   		<div class="modal-content">
   			<div class="modal-header">
   				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"> <i class="material-icons">close</i> </button>
-  				<h4 class="modal-title" id="myModalLabel">Oficio No. | {{ codOficioModal }} </h4>
-  			</div>
+  				<h4 class="modal-title" id="myModalLabel">Oficio No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
+          <!-- Loader de Carga de los Datos -->
+          <div id="loader-2" *ngIf="loading_table == 'show'" >
+            <img src="assets/images/loading_2.gif" alt="Cargando Tareas" style="width:25px;">
+          </div>
+        </div>
+
   			<div class="modal-body">
             <form>
               <div class="row">
                 <div class="col-md-6 mb-3">
                   <label for="validationDefault01">Nombre de Funcionario Asignado</label>
-                  <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="{{ nombreFuncModal }} {{ apellidoFuncModal }} {{ idFuncModal }} " disabled>
+                  <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="{{ nombre1FuncModal }} {{ nombre2FuncModal }} {{ apellido1FuncModal }} {{ apellido2FuncModal }} " disabled>
                 </div>
                 <div class="col-md-6 mb-3">
                   <label for="validationDefault02">Buscar por Nombre</label>
@@ -132,7 +139,7 @@
           </form>
 
           <!-- Tabla de Funcionarios disponibles para asignar -->
-          <div class="table-responsive" style="height: 300px; overflow: auto">
+          <div class="table table-striped table-bordered" style="height: 300px; overflow: auto">
             <table class="table">
               <thead>
                 <tr>
@@ -151,7 +158,10 @@
                   <td> {{ item.idTipoFuncionario.descTipoFuncionario }} </td>
                   <td> {{ item.emailFuncionario }} </td>
                   <td> {{ item.celularFuncionario }} </td>
-                  <td> <a style="cursor: pointer;" class="nav-link" (click)="asignarOficioFuncionario( codOficioModal, item.idFuncionario )" >
+                  <td *ngIf="loading_tr == 'hide'" > <a style="cursor: pointer;" class="nav-link"
+                      (click)="asignarOficioFuncionario( codOficioIntModal, codOficioRefModal, item.idFuncionario,
+                            item.nombre1Funcionario, item.apellido1Funcionario,
+                            item.nombre2Funcionario, item.apellido2Funcionario )" >
                     <span class="badge badge-pill badge-primary"  data-toggle="tooltip" data-placement="top" title="Asigna Oficio al Funcionario seleccionado" >Asignar</span></a>
                   </td>
                 </tr>
