--- a/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 </head>
 <body>
     <div class="container">
-        <div class="jumbotron">
-            <h1 class="display-3">Estimado(a) Sr(a): {{ name }}  {{ apellidoOficio }} </h1>
+        <div class="jumbotron">    
+  
+            <h1 class="display-3">Estimado(a), </h1>
+            <h2 class="display-3"> {{ name }}  {{ apellidoOficio }} </h2>
             <p class="lead">Se le notifica la Asignación de un Oficio con la siguiente informacion: </p>
             <hr class="my-4">
             <ul>
@@ -14,13 +17,13 @@
                 <li> Numero de Oficio Interno: {{ oficioInNo }} </li>
                 <li> Tema: {{ temaOficio }} </li>
                 <li> Contenido: {{ descOficio }} </li>
-                <li> Fecha Entrega: {{ fechaIngresoOfi }} </li>
-                <li> Fecha Creacion: </li>                
+                <li> Fecha Entrega: {{ fechaMaxOfi }} </li>
+                <li> Fecha Creacion:{{ fechaIngresoOfi }} </li>                
             </ul>
             
-            <img src="{{ 'secretaria_exterior.png'  }}" alt="Symfony!" />
             <h4> Saludos cordiales </h4>
-
+            <img src="{{ asset('src/images.jpg') }}" alt="SRECI" style="width:50px" />  
+            
         </div>
     </div>
 </body>
