--- a/symfony/app/Resources/views/Emails/sendMail.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMail.html.twig
@@ -6,8 +6,9 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="display-3">Estimado(a) Sr(a): {{ name }}  {{ apellidoOficio }} </h1>
-            <p class="lead">Se ha ingresado un Oficio con la siguiente informacion: </p>
+            <h1 class="display-3">Estimado(a): </h1>
+            <h2 class="display-3">{{ name }}  {{ apellidoOficio }} </h2>
+            <p class="lead">Se ha ingresado un Oficio, con la siguiente informacion: </p>
             <hr class="my-4">
             <ul>
                 <li> Numero de Oficio Externo: {{ oficioExtNo }} </li>
