--- a/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="jumbotron">    
   
-            <h1 class="display-3">Estimado(a), </h1>
+            <h1 class="display-3">Estimado(a): </h1>
             <h2 class="display-3"> {{ name }}  {{ apellidoOficio }} </h2>
             <p class="lead">Se le notifica la Asignación de un Oficio con la siguiente informacion: </p>
             <hr class="my-4">
