--- a/Angular_SICDOC/sicdoc/src/app/views/login/register.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/register.component.html
@@ -34,12 +34,13 @@
 				</div>
       </div>
 
+      <!-- Fila para los Nombres -->
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-6">
 					<div class="form-group">
              <input #primerNombre="ngModel" type="text" name="primerNombre" id="primerNombre" class="form-control input-lg"  ngControl="primerNombre" [(ngModel)]="user.primerNombre"
                placeholder="Primer Nombre" tabindex="2" required maxlength="20">
-               <small class="form-text text-muted" *ngIf="primerNombre.errors?.required" >E Primer Nombre es obligatorio</small>
+               <small class="form-text text-muted" *ngIf="primerNombre.errors?.required" >El Primer Nombre es obligatorio</small>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6">
@@ -50,12 +51,13 @@
 				</div>
 			</div>
 
+      <!-- Fila para los Apellidos -->
         <div class="row" >
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
                <input #primerApellido="ngModel" type="text" name="primerApellido" id="primerApellido" class="form-control input-lg" ngControl="primerApellido" [(ngModel)]="user.primerApellido"
                   placeholder="Primer Apellido" tabindex="4" required maxlength="20">
-                  <small class="form-text text-muted" *ngIf="primerApellido.errors?.required" >E Primer Apellido es obligatorio</small>
+                  <small class="form-text text-muted" *ngIf="primerApellido.errors?.required" >El Primer Apellido es obligatorio</small>
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6">
@@ -65,7 +67,25 @@
             </div>
           </div>
         </div>
+
+
+      <!-- Fila para los Telefonos -->
+      <div class="row" >
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="form-group">
+             <input #celularFuncionario="ngModel" type="text" name="celularFuncionario" id="celularFuncionario" class="form-control input-lg" ngControl="celularFuncionario"
+                [(ngModel)]="user.celularFuncionario" placeholder="Celular" tabindex="6" required maxlength="8">
+                <small class="form-text text-muted" *ngIf="celularFuncionario.errors?.required" >El Celular es obligatorio</small>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="form-group">
+             <input type="text" name="telefonoFuncionario" id="telefonoFuncionario" class="form-control input-lg" ngControl="telefonoFuncionario"
+                  [(ngModel)]="user.telefonoFuncionario" placeholder="Telefono" tabindex="7" maxlength="8" >
+          </div>
+        </div>
       </div>
+    </div>
 
       <hr>
       <!-- Datos de las Credenciales -->
@@ -81,7 +101,7 @@
             <div class="form-group">
               <input #inicialesUsuario="ngModel" type="text" name="inicialesUsuario" id="inicialesUsuario"
                   class="form-control input-lg" ngControl="inicialesUsuario" [(ngModel)]="user.inicialesUsuario"
-                  placeholder="Iniciales" tabindex="6" required minlength="3" maxlength="5">
+                  placeholder="Iniciales" tabindex="8" required minlength="3" maxlength="5">
                   <small class="form-text text-muted" *ngIf="inicialesUsuario.errors?.required" >Las Iniciales son Obligatorias</small>
                   <small class="form-text text-muted" *ngIf="inicialesUsuario.errors?.minlength" >Se nesesita por lo menos {{ inicialesUsuario.errors.minlength.requiredLength }} caracteres</small>
           </div>
@@ -90,7 +110,7 @@
         <div class="col-xs-12 col-sm-6 col-md-9">
   			  <div class="form-group">
             <input #emailUsuario="ngModel" type="email" name="emailUsuario" id="emailUsuario" class="form-control input-lg" ngControl="emailUsuario" [(ngModel)]="user.emailUsuario"
-                  placeholder="nombre@dominio.com" tabindex="7" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+                  placeholder="nombre@dominio.com" tabindex="9" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
                   <small class="form-text text-muted" *ngIf="emailUsuario.errors?.pattern" >El campo no tiene formato de Correo</small>
                   <small class="form-text text-muted" *ngIf="emailUsuario.errors?.required" >El Email es obligatorio</small>
   			  </div>
@@ -99,7 +119,7 @@
   				<div class="col-xs-12 col-sm-6 col-md-6">
   					<div class="form-group">
   						<input #passwordUsuairo="ngModel" type="password" name="passwordUsuairo" id="passwordUsuairo" class="form-control input-lg" ngControl="passwordUsuairo" [(ngModel)]="user.passwordUsuairo"
-                  placeholder="Contraseña" tabindex="8" required minlength="5" maxlength="20">
+                  placeholder="Contraseña" tabindex="10" required minlength="5" maxlength="20">
                   <small class="form-text text-muted" *ngIf="passwordUsuairo.errors?.minlength" >Se nesesita por lo menos {{ passwordUsuairo.errors.minlength.requiredLength }} caracteres</small>
                   <small class="form-text text-muted" *ngIf="passwordUsuairo.errors?.required" >La Contraseña es obligatoria</small>
   					</div>
@@ -107,7 +127,7 @@
   				<div class="col-xs-12 col-sm-6 col-md-6">
   					<div class="form-group">
   						<input #passwordConfirmation="ngModel" type="password" name="passwordConfirmation" id="passwordConfirmation" class="form-control input-lg" ngControl="user.passwordConfirmation" [(ngModel)]="user.passwordConfirmation"
-                  placeholder="Confirma Contraseña" tabindex="9" required maxlength="20" >
+                  placeholder="Confirma Contraseña" tabindex="11" required maxlength="20" >
                   <small class="form-text text-muted" *ngIf=" user.passwordUsuairo != user.passwordConfirmation " >Las Contraseñas no son iguales</small>
   					</div>
   				</div>
@@ -150,8 +170,8 @@
   			<div class="row">
   				<div class="col-xs-12 col-sm-6 col-md-6">
   					<div class="form-group">
-              <select #idTipoFuncionario="ngModel" class="form-control" name="idTipoFuncionario" id="idTipoFuncionario" ngControl="idTipoFuncionario" [(ngModel)]="user.idTipoFuncionario" >
-                  <option value="0">Selecciona una Opcion</option>
+              <select #idTipoFuncionario="ngModel" class="form-control" required name="idTipoFuncionario" id="idTipoFuncionario" ngControl="idTipoFuncionario" [(ngModel)]="user.idTipoFuncionario" >
+                  <option value="0">Tipo de Funcionario SRECI</option>
                   <option *ngFor="let list of JsonOutgetlistaTipoFuncionario" value="{{ list.idTipoFuncionario }}">{{ list.descTipoFuncionario }}</option>
               </select>
               <small class="form-text text-muted" *ngIf="idTipoFuncionario.value == 0 || idTipoFuncionario.value == null " >Debes Seleccionar un Tipo de Funcionario</small>
@@ -162,8 +182,8 @@
 
           <div class="col-xs-12 col-sm-6 col-md-6">
   					<div class="form-group" >
-              <select #idTipoUsuario="ngModel" class="form-control" name="idTipoUsuario" id="idTipoUsuario" ngControl="idTipoUsuario" [(ngModel)]="user.idTipoUsuario">
-                  <option value="0">Selecciona una Opcion</option>
+              <select #idTipoUsuario="ngModel" class="form-control" required name="idTipoUsuario" id="idTipoUsuario" ngControl="idTipoUsuario" [(ngModel)]="user.idTipoUsuario">
+                  <option value="0">Tipo de Usuario SRECI</option>
                   <option *ngFor="let list of JsonOutgetlistaTipoUsuario"  [value]="list.idTipoUsuario" >{{ list.descTipoUsuario }}</option>
               </select>
               <small class="form-text text-muted" *ngIf="idTipoUsuario.value == 0 || idTipoUsuario.value == null " >Debes Seleccionar un Tipo de Usuario</small>
@@ -222,11 +242,11 @@
 			<hr class="colorgraph">
 			<div class="row">
 				<div class="col-xs-12 col-md-6">
-            <input type="submit" value="Registrarse" class="btn btn-primary btn-block btn-lg" tabindex="17" onclick="validCampo(passwordConfirmation)">
+            <input type="submit" value="Registrarse" class="btn btn-primary btn-block btn-lg" tabindex="17" [disabled]="!registerForm.valid"  >
         </div>
 				<div class="col-xs-12 col-md-6">
-            <a [routerLink]="['/login']" class="btn btn-success btn-block btn-lg" disabled
-              ng-disabled="passwordUsuairo.errors?.minlength" >Ingresar</a>
+            <a [routerLink]="['/login']" class="btn btn-success btn-block btn-lg"
+               >Ingresar</a>
         </div>
 			</div>
 		</form>
